namespace Weapons
{
    public interface IAttackable
    {
        void Attack();
    }
}