namespace Weapons
{
    public interface IWeapon
    {
        
    }
}