@startuml

class GameLifeTimeScope{}

Player *-- PlayerMover
Player *-- MyInput
Player *-- WeaponController
WeaponController *-- MyInput
class Player{
}
class PlayerMover{
private CharacterController _characterController;
}
class MyInput{}
WeaponController *-- IAttackable
class WeaponController{

}
HandGun -* BulletController
HandGun -* HitManager
BulletController --* BulletPool
BulletPool -* BulletMono
class HandGun extends IWeapon,IAttackable{}

interface IWeapon{}
interface IAttackable{}
InGameManager *-- InGameUIManager
class InGameUIManager{}
class InGameManager{}

class BulletMono{}
class BulletPool{}
class BulletController{}

class HitManager{}


@enduml